// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now lf-baseline 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 107,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now crlf-terminators 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 109,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 101,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-bmp 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 106,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 98,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-astral 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 110,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 102,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now lf-baseline 2`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 30,
      "line": 3,
      "offset": 110,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""Date[\\"now\\"]"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now crlf-terminators 2`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 30,
      "line": 3,
      "offset": 112,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 101,
    },
  },
  "spanText": ""Date[\\"now\\"]"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-bmp 2`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 30,
      "line": 3,
      "offset": 109,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 98,
    },
  },
  "spanText": ""Date[\\"now\\"]"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-astral 2`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 30,
      "line": 3,
      "offset": 113,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 102,
    },
  },
  "spanText": ""Date[\\"now\\"]"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now lf-baseline 3`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 118,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""globalThis.Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now crlf-terminators 3`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 120,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 101,
    },
  },
  "spanText": ""globalThis.Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-bmp 3`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 117,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 98,
    },
  },
  "spanText": ""globalThis.Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-astral 3`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 121,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 102,
    },
  },
  "spanText": ""globalThis.Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random lf-baseline 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 107,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 96,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random crlf-terminators 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 109,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 98,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random unicode-bmp 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 106,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 95,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random unicode-astral 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 110,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date lf-baseline 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 107,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 97,
    },
  },
  "spanText": ""new Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date crlf-terminators 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 109,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""new Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date unicode-bmp 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 106,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 96,
    },
  },
  "spanText": ""new Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date unicode-astral 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 110,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 100,
    },
  },
  "spanText": ""new Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date lf-baseline 2`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 118,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 97,
    },
  },
  "spanText": ""new globalThis.Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date crlf-terminators 2`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 120,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""new globalThis.Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date unicode-bmp 2`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 117,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 96,
    },
  },
  "spanText": ""new globalThis.Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date unicode-astral 2`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 38,
      "line": 3,
      "offset": 121,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 100,
    },
  },
  "spanText": ""new globalThis.Date()"",
}
`;

exports[`deterministic-time diagnostic spans keeps intra-expression hazard order stable for mixed-array-expression 1`] = `
[
  {
    "rule": "odw/no-math-random",
    "severity": "warning",
    "span": {
      "end": {
        "column": 29,
        "line": 2,
        "offset": 91,
      },
      "start": {
        "column": 18,
        "line": 2,
        "offset": 80,
      },
    },
    "spanText": ""Math.random"",
  },
  {
    "rule": "odw/no-date-now",
    "severity": "warning",
    "span": {
      "end": {
        "column": 41,
        "line": 2,
        "offset": 103,
      },
      "start": {
        "column": 33,
        "line": 2,
        "offset": 95,
      },
    },
    "spanText": ""Date.now"",
  },
  {
    "rule": "odw/no-date-now",
    "severity": "warning",
    "span": {
      "end": {
        "column": 62,
        "line": 2,
        "offset": 124,
      },
      "start": {
        "column": 54,
        "line": 2,
        "offset": 116,
      },
    },
    "spanText": ""Date.now"",
  },
]
`;

exports[`deterministic-time diagnostic spans keeps intra-expression hazard order stable for nested-new-date-expression 1`] = `
[
  {
    "rule": "odw/no-date-now",
    "severity": "warning",
    "span": {
      "end": {
        "column": 37,
        "line": 2,
        "offset": 99,
      },
      "start": {
        "column": 29,
        "line": 2,
        "offset": 91,
      },
    },
    "spanText": ""Date.now"",
  },
  {
    "rule": "odw/no-math-random",
    "severity": "warning",
    "span": {
      "end": {
        "column": 69,
        "line": 2,
        "offset": 131,
      },
      "start": {
        "column": 58,
        "line": 2,
        "offset": 120,
      },
    },
    "spanText": ""Math.random"",
  },
]
`;
